<resources>
    <string name="service_version">1.0.5</string>
    <string name="auth_name"></string>
    <string name="auth_pwd"></string>
    <string name="checkout_hash_key_test">123456</string>
    <string name="checkout_hash_key_live">5d89We</string>
    <string name="download_image_path">appservice/image/index</string>
    <string name="download_image_product_path">appservice/image/product</string>
    <string name="payment_creditcard_url">appservice/checkout/ccpayjump?session_key=%1$s&amp;orderId=%2$s&amp;appid=1</string>
    <string name="upload_file_path">appservice/order/uploadTransferProof</string>
    <string name="jump_market_uri">market://details?id=com.wnp.app</string>
    <string-array name="size_array">
        <item>S</item>
        <item>M</item>
        <item>ML</item>
        <item>XS</item>
        <item>XL</item>
    </string-array>
    <string-array name="color_array">00</string-array>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tues">Tues</string>
    <string name="Wed">Wed</string>
    <string name="Thur">Thur</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string-array name="WeekAbbr">
        <item name="Sun">Sun</item>
        <item name="Mon">Mon</item>
        <item name="Tues">Tue</item>
        <item name="Wed">Wed</item>
        <item name="Thur">Thu</item>
        <item name="Fri">Fri</item>
        <item name="Sat">Sat</item>
    </string-array>
    <string-array name="Week">
        <item name="Sunday">Sunday</item>
        <item name="Monday">Monday</item>
        <item name="Tuesday">Tuesday</item>
        <item name="Wednesday">Wednesday</item>
        <item name="Thursday">Thursday</item>
        <item name="Friday">Friday</item>
        <item name="Saturday">Saturday</item>
    </string-array>
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="Aug">Aug</string>
    <string name="Sept">Sept</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string-array name="MonthAbbr">
        <item name="Jan">Jan</item>
        <item name="Feb">Feb</item>
        <item name="Mar">Mar</item>
        <item name="Apr">Apr</item>
        <item name="May">May</item>
        <item name="June">June</item>
        <item name="July">July</item>
        <item name="Aug">Aug</item>
        <item name="Sept">Sept</item>
        <item name="Oct">Oct</item>
        <item name="Nov">Nov</item>
        <item name="Dec">Dec</item>
    </string-array>
    <string-array name="Month">
        <item name="January">January</item>
        <item name="February">February</item>
        <item name="March">March</item>
        <item name="April">April</item>
        <item name="May">May</item>
        <item name="June">June</item>
        <item name="July">July</item>
        <item name="August">August</item>
        <item name="September">September</item>
        <item name="October">October</item>
        <item name="November">November</item>
        <item name="December">December</item>
    </string-array>
    <string name="Global_Error_Internet">Please check the internet, and try again.</string>
    <string name="Global_Error_Server">Something went wrong, pls try again later.</string>
    <string name="FB_Login_tips_error">Please check the internet, and try again.</string>
    <string name="customxlistview_header_hint_normal">The drop-down refresh</string>
    <string name="customxlistview_header_hint_ready">load data</string>
    <string name="customxlistview_header_hint_loading">loading...</string>
    <string name="customxlistview_header_last_time"></string>
    <string name="customxlistview_footer_hint_normal">Load more</string>
    <string name="messagedialog_message">Message</string>
    <string name="messagedialog_ok">OK</string>
    <string name="messagedialog_cancel">CANCEL</string>
    <string name="messagedialog_settings">SETTINGS</string>
    <string name="messagedialog_allow">ALLOW</string>
    <string name="messagedialog_deny">DENY</string>
    <string name="action_settings">Settings</string>
    <string name="shoppingcart_shippingfeehint">*Shipping fees may apply</string>
    <string name="SHOPPINGCART">Shopping Cart</string>
    <string name="hint_GEMCash_voucher">Enter your voucher code</string>
    <string name="APPLY">APPLY</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Voucher">Voucher</string>
    <string name="store_credit">Store Credits</string>
    <string name="description_on_page_end">(6% GST applied where applicable)</string>
    <string name="CHECKOUT">Checkout</string>
    <string name="shopping_cart_nothing_text">Your shopping cart is currently empty.</string>
    <string name="shopping_cart_nothing_bottom_button">LET&#180;S GO SHOPPING</string>
    <string name="apply_hint_green">Voucher code \&#039;$voucherCode$\&#039; is applied.</string>
    <string name="apply_hint_red">This is a required field.</string>
    <string name="checkout_payment_dialog_title">CVC&#160;/&#160;CVV2</string>
    <string name="checkout_payment_dialog_text2">For American Express holders, CVV is the special
        4-digit printed next to the card number on the front of your card.
    </string>
    <string name="checkout_payment_dialog_text1">For Visa &#038; MasterCard holders, CVV is the
        special 3-digit printed next to the signature area, on the back of your card.
    </string>
    <string name="Qunatity">Quantity:&#160;</string>
    <string name="paypal_payment">Paypal Express Checkout</string>
    <string name="shipping">ADDRESS</string>
    <string name="payment">PAYMENT</string>
    <string name="review">REVIEW</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="Ship_To">Ship To:</string>
    <string name="ADD_NEW_ADDRESS">+ ADD ADDRESS</string>
    <string name="Shipping_Fee">Shipping Fee</string>
    <string name="I_would_like_to_pay_with">I would like to pay with</string>
    <string name="Grand_Total">GRAND TOTAL:</string>
    <string name="Grand_Total_below_description">6% GST applied where applicable &#160;</string>
    <string name="Payment_Method">Payment Method</string>
    <string name="Payment_Method_Edit_Label">Payment Method</string>
    <string name="PLACE_MY_ORDER">PLACE MY ORDER</string>
    <string name="payment_method_ONLINE_BANKING">Online Banking</string>
    <string name="payment_method_CREDIT_DEBITCARD">Credit &amp; Debit Card</string>
    <string name="dialog_checkout_text">Thank you for your confirmation.\n Please do not close this
        mobile application while we are processing your payment.
    </string>
    <string name="payment_status_wrong">Maybe something went wrong during \n the payment process. \n
        Please try again.
    </string>
    <string name="checkout_review_common_et_hint">Order Comment</string>
    <string name="payment_molpay_hint">We are processing your payment, please wait.</string>
    <string name="This_is_a_required_field">This is a required field.</string>
    <string name="Credit_Card_Number">Credit Card Number</string>
    <string name="CVC_CVV2">CVC&#160;/&#160;CVV2</string>
    <string name="MM_YY">MM&#160;|&#160;YY</string>
    <string name="Name_On_Card">Name On Card</string>
    <string name="Expiration_Date">Expiration Date</string>
    <string name="Card_Type">Card Type</string>
    <string name="State">State</string>
    <string name="Issuer_Bank">Issuer Bank</string>
    <string name="PAYMENT_STATUS">Payment Status</string>
    <string name="RETRY">RETRY</string>
    <string name="Oops.">Oops.</string>
    <string name="Thank_you_for_your_order">Thank you for your order</string>
    <string name="Your_order_number_is">Your order number is:</string>
    <string name="A_confirmation_email_has_been_sent_to">A confirmation email has been sent to
    </string>
    <string name="yourmail_mail.com">yourmail@mail.com</string>
    <string name="CHECK_ORDER">CHECK ORDER</string>
    <string name="CONTINUE_SHOPPING">CONTINUE SHOPPING</string>
    <string name="Payment_channel_is_incorrect">Payment channel is incorrect</string>
    <string name="Malaysia">Malaysia</string>
    <string name="payment_mark_title">Love using \"%1$s\" app?</string>
    <string name="payment_mark_message">Please rate us in the Play Store</string>
    <string name="payment_rate_us_now">Rate Us Now</string>
    <string name="payment_rate_cancel">Cancel</string>
    <string name="loginregister_emailbound_header_title">Welcome To Wnp</string>
    <string name="loginregister_emailbound_message">You\'re almost there!\nTo complete your Wnp
        registration, please enter your email address: (Don\'t worry, we will never share your
        private information with others)
    </string>
    <string name="loginregister_emailbound_email_hint">Email</string>
    <string name="loginregister_emailbound_createaccount">CREATE ACCOUNT</string>
    <string name="loginregister_emailbound_tips_error_email_empty">This is a required field.
    </string>
    <string name="loginregister_emailbound_tips_error_email_format">Please enter a valid email
        address. For example johndoe@domain.com.
    </string>
    <string name="loginregister_emailbound_tips_error_phone_number_format">Please enter a valid
        phone number.Longer than 7, less than 15
    </string>
    <string name="myorder_detail_instruction">*Orders placed after 5pm or at the weekend, including
        public holidays, will be processed the next working day.
    </string>
    <string name="myorder_detail_description_on_page_end">(6% GST applied where applicable)</string>
    <string name="ChangePassword">Change Password</string>
    <string name="productlist_sort_title">Sort</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="cancel">Cancel</string>
    <string name="select_service">Select Service</string>
    <string name="Okay">OK</string>
    <string name="app_rate_text1">Love using Wnp?</string>
    <string name="sort">Start</string>
    <string name="filter">FILTER</string>
    <string name="sort_cancel">Cancel</string>
    <string name="shoes">Shoes</string>
    <string name="rate_now">RATE NOW</string>
    <string name="ask_me_later">ASK ME LATER</string>
    <string name="no_thanks">NO&#160;THANKS</string>
    <string name="_default">Default</string>
    <string name="name_az">NAME A-Z</string>
    <string name="name_za">NAME Z-A</string>
    <string name="price_low_hight">Price Low-Hight</string>
    <string name="price_hight_low">Price Hight-Low</string>
    <string name="accessories_upp">ACCESSORIES</string>
    <string name="clothing_upp">CLOTHING</string>
    <string name="musim_wear_upp">MUSIM WEAR</string>
    <string name="accessories2_upp">ACCESSORIES2</string>
    <string name="accessories3_upp">ACCESSORIES3</string>
    <string name="accessories4_upp">ACCESSORIES4</string>
</resources>