<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imaginato="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteffffff">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/sort_relative1">
        <com.whitelabel.app.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            style="@style/font_family_robot_regular"
            />
        <com.whitelabel.app.widget.CustomTextView
            android:id="@+id/sort_cancle"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/sort_cancel"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            style="@style/font_family_robot_regular"
            />
    </RelativeLayout>
    <View
        android:id="@+id/sort_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greye1e1e1"
        android:layout_below="@+id/sort_relative1"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_view">
    <RadioGroup
        android:id="@+id/sort_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="55dp"
        >
        <RadioButton
            android:id="@+id/sort_RadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/_default"
            android:paddingLeft="10dp"
            android:textSize="17sp"
            android:textColor="@color/black000000"
            android:button="@drawable/radiogroup_background"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/name_az"
            android:layout_marginTop="29dp"
            android:paddingLeft="10dp"
            android:textSize="17sp"
            android:textColor="@color/black000000"
            android:button="@drawable/radiogroup_background"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/name_za"
            android:layout_marginTop="29dp"
            android:paddingLeft="10dp"
            android:textSize="17sp"
            android:textColor="@color/black000000"
            android:button="@drawable/radiogroup_background"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/price_low_hight"
            android:layout_marginTop="29dp"
            android:paddingLeft="10dp"
            android:textSize="17sp"
            android:textColor="@color/black000000"
            android:button="@drawable/radiogroup_background"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/price_hight_low"
            android:layout_marginTop="29dp"
            android:paddingLeft="10dp"
            android:textSize="17sp"
            android:textColor="@color/black000000"
            android:button="@drawable/radiogroup_background"
            />
    </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <View
            android:id="@+id/sortline_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greye1e1e1"
           ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/whiteFFFFFF"
        android:orientation="horizontal"
        android:layout_below="@+id/sortline_view"
        >
        <com.whitelabel.app.widget.CustomTextView
            android:id="@+id/filter_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/filter"

            android:textSize="17sp"
            android:onClick="onClick"
            android:gravity="center"
            android:background="@color/whiteFFFFFF"
            style="@style/font_family_robot_regular"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/greye1e1e1"
            android:layout_gravity="center_vertical"/>
        <com.whitelabel.app.widget.CustomTextView
            android:id="@+id/sort_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/productlist_sort_title"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/purple3A0047"
            android:onClick="onClick"
            android:background="@color/whiteFFFFFF"
            style="@style/font_family_robot_regular"
            />

    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>