<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imaginato="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black50000000">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_app_rate"
        android:layout_gravity="center"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:layout_centerVertical="true">
       <com.whitelabel.app.widget.CustomTextView
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/app_rate_text1"
           android:gravity="left"
           android:layout_marginBottom="20dp"
           android:id="@+id/app_rate1"
           android:textSize="18sp"
           android:textColor="@color/black111111"
           style="@style/font_family_roboto_medium"
           />
        <com.whitelabel.app.widget.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_mark_message"
            android:textColor="@color/black999999"
            android:layout_below="@+id/app_rate1"
            android:gravity="left"
            android:id="@+id/app_rate2"
            style="@style/font_family_robot_regular"
            android:textSize="16sp"
            />
        <com.whitelabel.app.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_rate2"
            android:layout_marginTop="24dp"
            android:text="@string/rate_now"
            android:id="@+id/rate_now"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/purple92018d"
            style="@style/font_family_roboto_medium"
            />
        <com.whitelabel.app.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rate_now"
            android:layout_marginTop="15dp"
            android:text="@string/ask_me_later"
            android:id="@+id/ask_me_later"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/purple92018d"
            style="@style/font_family_roboto_medium"
            />
        <com.whitelabel.app.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ask_me_later"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/no_thanks"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/no_thanks"
            android:layout_alignParentRight="true"
            android:textColor="@color/purple92018d"
            style="@style/font_family_roboto_medium"
            />
    </RelativeLayout>

</RelativeLayout>
