<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imaginato="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.whitelabel.app.widget.CustomTextView
            style="@style/font_family_robot_regular"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10sp"/>
            <Spinner
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:prompt="@string/select_service"
                android:id="@+id/spinnerSelectService"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/background"/>
            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">
                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"/>
                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/Okay"
                    android:id="@+id/okay"/>
            </RelativeLayout>
</LinearLayout>
