<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imaginato="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <View
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/greyD0D0D0"
            android:layout_marginBottom="20dp"
             />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <View
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:background="@color/whiteFFFFFF"
            android:layout_margin="10dp"
            />
        <com.whitelabel.app.widget.CustomTextView
            style="@style/font_family_robot_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"

            android:id="@+id/cancel"
            android:textColor="@anim/to_cancel"
            />
        </LinearLayout>
     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="@string/shoes"
         android:layout_marginTop="13dp"
         android:layout_marginLeft="50dp"
         android:singleLine="true"
         android:cursorVisible="true"
         android:background="@null"
         android:textCursorDrawable="@null"
         android:id="@+id/seek"
         />
     <ImageView
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:src="@mipmap/ss"
         android:scaleType="fitXY"
         android:layout_marginTop="13dp"
         android:layout_marginLeft="12dp"
         />
    </RelativeLayout>
    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="5dp"
        >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp">
        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:background="@color/purple3A0047"
            android:layout_alignParentBottom="true"
            android:id="@+id/scrollViewX"
            android:layout_marginLeft="30dp"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >
            <com.whitelabel.app.widget.CustomTextView
                style="@style/font_family_robot_regular"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/accessories_upp"
               android:id="@+id/accessories"
               android:layout_marginLeft="7dp"
               android:layout_marginRight="7dp"
               android:textColor="@color/black000000"
               />
            <com.whitelabel.app.widget.CustomTextView
                style="@style/font_family_robot_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clothing_upp"
                android:id="@+id/clothing"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/black000000"
                />
            <com.whitelabel.app.widget.CustomTextView
                style="@style/font_family_robot_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musim_wear_upp"
                android:id="@+id/musim_wear"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/black000000"
                />
            <com.whitelabel.app.widget.CustomTextView
                style="@style/font_family_robot_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessories2_upp"
                android:id="@+id/accessories2"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/black000000"
                />
            <com.whitelabel.app.widget.CustomTextView
                style="@style/font_family_robot_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessories3_upp"
                android:id="@+id/accessories3"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/black000000"
                />
            <com.whitelabel.app.widget.CustomTextView
                style="@style/font_family_robot_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessories4_upp"
                android:id="@+id/accessories4"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:textColor="@color/black000000"
                />
        </LinearLayout>
     </RelativeLayout>
    </HorizontalScrollView>
   <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="-15dp"
       >
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black666666"
                android:layout_marginTop="15dp"
                 />

   </RelativeLayout>
    <GridView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:id="@+id/gridView"
        android:paddingTop="10dp"
        android:paddingLeft="4dp"
        >
    </GridView>
</LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/whiteFFFFFF"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >
        <com.whitelabel.app.widget.CustomTextView
            style="@style/font_family_robot_regular"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/filter"

          android:textSize="17sp"
          android:layout_marginLeft="80dp"
          />
        <com.whitelabel.app.widget.CustomTextView
            style="@style/font_family_robot_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/productlist_sort_title"

            android:textSize="17sp"
            android:layout_marginRight="80dp"
            android:layout_alignParentRight="true"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:background="@color/black000000"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</RelativeLayout>